--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -13,13 +13,14 @@
 
 * Inbox
 * Next Action
-** TODO [#A] 完成每日日报                                             :work:
-SCHEDULED: <2021-05-23 Sun 19:00 ++1d> DEADLINE: <2021-05-23 Sun 23:59 ++1d>
+** TODO [#A] 完成每日日报                                            :work:
+SCHEDULED: <2021-05-24 周一 19:00 ++1d> DEADLINE: <2021-05-24 周一 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-22 Sat 11:41]
+:LAST_REPEAT: [2021-05-23 周日 21:39]
 :END:
 
+- State "DONE"       from "TODO"       [2021-05-23 周日 21:39]
 - State "CANCELED"   from "TODO"       [2021-05-22 Sat 11:41] \\
   放假
 - State "DONE"       from "TODO"       [2021-05-21 周五 16:46]
@@ -191,10 +192,12 @@ SCHEDULED: <2021-05-23 Sun 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-05-10 周一 11:09]
 ** TODO [#B] 学习ui编辑器制作动画的方法                          :learn:m8:
 SCHEDULED: <2021-05-21 周五 17:00>
-** TODO [#A] 宠物详情突破的属性不同步                             :work:m8:
-SCHEDULED: <2021-05-24 周一 09:00>
-** TODO [#A] 支持服务器外测服                                     :work:m8:
+** TODO [#A] 顶替规则的buff回合数显示异常                         :work:m8:
+SCHEDULED: <2021-05-23 周日 19:52
+** WAIT [#A] 支持服务器外测服                                     :work:m8:
 SCHEDULED: <2021-05-23 周日 09:00>
+- State "WAIT"       from "TODO"       [2021-05-23 周日 21:21] \\
+  排查之后应该是服务端问题
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 解决导表编辑器生成bug                              :m8:learn:
 CLOSED: [2021-05-09 周日 10:05]
@@ -283,6 +286,16 @@ CLOCK: [2021-05-10 周一 13:39]--[2021-05-10 周一 14:04] =>  0:25
 CLOCK: [2021-05-10 周一 13:09]--[2021-05-10 周一 13:34] =>  0:25
 CLOCK: [2021-05-10 周一 11:10]--[2021-05-10 周一 11:35] =>  0:25
 :END:
+** DONE [#A] 为正在开发的按钮添加点击提示                         :work:M8:
+CLOSED: [2021-05-23 周日 20:35]
+- State "DONE"       from "TODO"       [2021-05-23 周日 20:35]
+Scheduled: <2021-05-23 周日 19:50>
+** DONE [#A] 修改[是否显示计数]字段功能                           :work:m8:
+CLOSED: [2021-05-23 周日 21:19] SCHEDULED: <2021-05-23 周日 19:52>
+- State "DONE"       from "TODO"       [2021-05-23 周日 21:19]
+** DONE [#A] 宠物详情突破的属性不同步                             :work:m8:
+CLOSED: [2021-05-23 周日 20:04] SCHEDULED: <2021-05-24 周一 09:00>
+- State "DONE"       from "TODO"       [2021-05-23 周日 20:04]
 ** DONE [#B] 制作显示服务器时间的GM指令                           :work:m8:
 CLOSED: [2021-05-21 周五 11:19] SCHEDULED: <2021-05-21 周五 09:00>
 - State "DONE"       from "TODO"       [2021-05-21 周五 11:19]
