--- a/src/org/note/tech_note.org
+++ b/src/org/note/tech_note.org
@@ -195,9 +195,6 @@
   @enduml
 #+END_SRC
 
-#+RESULTS:
-[[file:~/sequencedlg.puml]]
-
 *** 活动图
 :PROPERTIES:
 :LINK: [[https://plantuml.com/zh/activity-diagram-beta][活动图]]
@@ -295,12 +292,13 @@ MVC模式中三个组件的详细介绍如下:
 ** python相同模组重复导入问题
 编写代码时碰到一个问题, 在不同文件使用相同的import语句导入一个模块, 结果产生了多个模块对象.
 首先明确几个概念:
-1. 模块对象存储在sys.modules字典中, 其中键为模块的__name__, 值为模块对象
-3. 模块的__name__变量是由import的时候决定的
-2. 在没有明确指定包结构的情况下, Python 是根据__name__来决定一个模块在包中的结构, 如果是__main__,
-   则它本身是顶层模块, 没有包结构. 如果是A.B.C结构, 那么顶层模块是A。基本上遵循这样的原则:
-   - 绝对导入 :: 一个模块只能导入自身的子模块或和它的顶层模块同级别的模块及其子模块(import yy.xxx)
-   - 相对导入 :: 一个模块必须有包结构且只能导入它的顶层模块内部的模块(import xxx, from . import xxx)
+1. import的搜索路径存储在sys.path列表之中, 在列表的前边搜索到指定模块之后不会继续搜索
+2. 模块对象存储在sys.modules字典中, 其中键为模块的__name__, 值为模块对象
+3. 模块的__name__变量是由模块被import的时候决定的
+4. 在没有明确指定包结构的情况下, Python 是根据__name__来决定一个模块在包中的结构. 如果是__main__,
+   则它本身是顶层模块, 没有包结构. 如果是A.B.C结构, 那么顶层模块是A, 其内导入基本上遵循这样的原则:
+   - 绝对导入 :: 一个模块只能导入自身的子模块或和它的顶层模块同级别的模块及其子模块(import C.D, import A1.B)
+   - 相对导入 :: 一个模块必须有包结构且只能导入它的顶层模块内部的模块(import ..B1, from . import C1, import C1)
    - 标准导入 :: 直接导入sys.path内可以找到的模块(无论包内包外) (import xxx)
 
 #+CAPTION: 例子
@@ -313,26 +311,30 @@ zz/
     main.py
   __init__.py
   test.py
-假设zz/, yy/在sys.path之中
+假设zz父目录, zz/, yy/在sys.path之中
 
 以下语句为main.py内的语句:
 ~import xxx~  # xxx在同一个包下的隐式相对导入, 等于from yy import xxx, 或from . import xxx
 则xxx模块内__name__ == 'yy.xxx'
 ~import yy.xxx~  # 绝对导入
 则xxx模块内__name__ == 'yy.xxx'
+~import zz.yy.xxx~ # 绝对导入
+则xxx模块内__name__ == 'zz.yy.xxx'
 
 以下语句为test.py内的语句:
-~import xxx~
-则xxx模块内__name__ == 'xxx'  # 标准导入
+~import xxx~ # 标准导入
+则xxx模块内__name__ == 'xxx'
 #+END_VERSE
-此时main和test模块虽然导入了一个模块, 但是在sys.modules里面产生了两个模块对象, 因此可以得出以下结论:
+此时main和test模块虽然导入了一个模块, 随着import语句不同, 会在sys.modules里面产生了不同的模块对象, 因此可以得出以下结论:
 1. 禁止使用隐式相对导入, 在python2.7中可以通过 ~from __future__ import absolute_import~ 来禁止隐式相对导入
 2. 使用绝对导入的时候使用相同的前缀, 即都使用import yy.xxx的形式, 要么都是用zz.yy.xxx
 3. 包外对象导入包内模块时, 也使用绝对导入形式, 不要使用标准导入
 
 ** python from import 问题
-1. ~from xx import yy~, 导入本地的yy对象是xx.yy对象的复制品, 如果xx.yy变化
-   并不会影响本地的yy变量. 如果想要共享同一个变量请使用 ~import xx~, xx.yy这样的使用方法
+你以为from xx import yy导入的量会和原本模块的xx.yy同步变化, 实际上并没有, 因为:
+1. ~from xx import yy~, 导入本地的yy对象是xx.yy对象的引用, 如果xx.yy变化会导致重新绑定
+   并不会影响本地的yy变量. 如果想要共享同一个变量请使用 ~import xx~, ~xx.yy~ 这样的使用方法
 2. 如果yy是可变类型(list, dict), 使用append这类操作是可以共享变化的, 一旦使用=等赋值语句
-   则会导致本地yy的id改变
+   则会导致本地yy的id改变, 发生重新绑定
 
+   
