[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -25,12 +25,23 @@ DEADLINE: <2021-06-12 周六 23:00 +1m> SCHEDULED: <2021-06-12 周六 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-05-30 周日 23:00 ++1w> SCHEDULED: <2021-05-29 周六 18:00 ++1w>
+DEADLINE: <2021-06-06 周日 23:00 ++1w> SCHEDULED: <2021-06-05 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-05-24 周一 09:02]
+:LAST_REPEAT: [2021-05-29 周六 16:22]
 :END:
+- State "DONE"       from "TODO"       [2021-05-29 周六 16:22] \\
+  1. 支持服务器外测服和真机连接外测服
+  2. 处理ios真机包首登无网络配置弹窗问题
+  3. 为ios和android真机包添加图标
+  4. 为英雄详情界面的几个按钮增加描述性弹框
+  5. 完成了临时组队功能
+  6. 处理了buff图标没有正确更新,移除的bug
+  7. 简单学习了ui编辑器的动画功能
+  ------------------------------------------------
+  ------------------------------------------------
+  1. 这周制作需求比较忙, 读书任务有几天没进行, 以后还是要抽时间来读
 - State "DONE"       from "TODO"       [2021-05-23 周日 22:02] \\
   1. 完成了大量m8界面优化相关的工单
   2. 将英雄山部分接入网络协议
@@ -54,6 +65,7 @@ DEADLINE: <2021-05-30 周日 23:00 ++1w> SCHEDULED: <2021-05-29 周六 18:00 ++1
   ------------------------------------------------
   1. 公司给内网机配备了青轴机械键盘, 不用买了
   2. 把老家的书籍和switch配件
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-05-02 Sun 23:07] \\
   1. 简单学习了PMGO系统的用法
   2. 完成了神武手游客户端教程的问题总结
@@ -62,6 +74,7 @@ DEADLINE: <2021-05-30 周日 23:00 ++1w> SCHEDULED: <2021-05-29 周六 18:00 ++1
   5. 完成了英雄山界面和模型的设计与实现
   ------------------------------------------------
   1. 让妈妈把游戏配件和书籍邮寄过来
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-04-25 周日 20:54] \\
   1. 学习了客户端常用功能(Functor, io等)
   2. 学习了调试工具的使用方法
@@ -71,6 +84,7 @@ DEADLINE: <2021-05-30 周日 23:00 ++1w> SCHEDULED: <2021-05-29 周六 18:00 ++1
   ------------------------------------------------
   1. 接种了第一针新冠疫苗
   2. 和部门同事聚餐(新疆菜)
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-04-17 周六 23:21] \\
   1. 学习UI基础, 完成了UI大作业
   2. 学习UI制作经验分享
@@ -79,6 +93,7 @@ DEADLINE: <2021-05-30 周日 23:00 ++1w> SCHEDULED: <2021-05-29 周六 18:00 ++1
   5. 学习了文本链接和导表的用法, 完成了导表作业
   ------------------------------------------------
   1. 打扫了新的公寓, 弄得比较干净了
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-04-11 周日 19:36] \\
   1. org-mode大概学了50%左右, 确实是一个重量级的GTD工具
   2. 完成了利为引擎的所有小作业
@@ -86,6 +101,7 @@ DEADLINE: <2021-05-30 周日 23:00 ++1w> SCHEDULED: <2021-05-29 周六 18:00 ++1
   ------------------------------------------------
   1. 顺利搬家到大壮名城, 离公司很近
   2. 家具基本置办齐全, 电脑相关的东西以后再考虑
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-04-04 周日 19:35] \\
   1. 对使用org-mode进行gtd进行了较为充分的学习, 基本掌握了用法.
   2. 重新读了一遍《python核心编程》, 加深了对py一些基本概念的理解.
@@ -93,6 +109,7 @@ DEADLINE: <2021-05-30 周日 23:00 ++1w> SCHEDULED: <2021-05-29 周六 18:00 ++1
   4. 初步学习了一下利为引擎, 当然除了开始的几章还有例子可以参考, 后面写的太简略了.
   ------------------------------------------------
   1. 自行车从家里邮过来之后组好, 送到车店保养.
+  ------------------------------------------------
 ** TODO [#A] 每月归档到年度文件                                     :event:
 DEADLINE: <2021-05-30 周日 23:00 ++1m> SCHEDULED: <2021-05-30 周日 09:00 ++1m>
 :PROPERTIES:
@@ -217,6 +234,28 @@ CLOSED: [2021-05-19 Wed 18:03] SCHEDULED: <2021-05-10 Mon 09:00>
   - [X] 电蚊香 ::
   - [X] 多功能螺丝套件 ::
 * Appointment
+** TODO [#B] 组装一台性价比高的台式机用于开发和娱乐       :shopping:future:
+<2021-06-01 周二>--<2021-06-30 周三>
+- State "WAIT"       from "TODO"       [2021-04-10 周六 14:03] \\
+  1. 显卡太贵
+  2. 没钱
+#+CAPTION[零件表]:
+#+NAME: PC_PRICES
+| N | component   | brand | model | price |
+|---+-------------+-------+-------+-------|
+| / | <3>         |   <2> | <2>   | <2>   |
+|   | motherboard |     0 |       |       |
+|   | fan         |     0 |       |       |
+|   | cpu         |     0 |       |       |
+|   | gpu         |     0 |       |       |
+|   | memory      |     0 |       |       |
+|   | ssd         |     0 |       |       |
+|   | power       |     0 |       |       |
+|   | case        |     0 |       |       |
+|   | monitor     |     0 |       |       |
+|   | keyboard    |     0 |       |       |
+|   | earphone    |     0 |       |       |
+可能还需要线缆收纳, 硅脂, 防静电手环等设备
 ** WAIT [#C] 爬火炉山                                               :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
@@ -232,4 +271,3 @@ CLOSED: [2021-05-19 Wed 13:32]
 <2021-05-12 周三>--<2021-06-15 周二>
 * Project
 * Someday
-** 买小风扇                                               :shopping:future:
