--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,12 +14,13 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-05-29 周六 19:00 ++1d> DEADLINE: <2021-05-29 周六 23:59 ++1d>
+SCHEDULED: <2021-05-30 周日 19:00 ++1d> DEADLINE: <2021-05-30 周日 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-28 周五 23:48]
+:LAST_REPEAT: [2021-05-29 周六 17:24]
 :END:
 
+- State "DONE"       from "TODO"       [2021-05-29 周六 17:24]
 - State "DONE"       from "TODO"       [2021-05-28 周五 23:48]
 - State "DONE"       from "TODO"       [2021-05-27 周四 23:32]
 - State "DONE"       from "TODO"       [2021-05-26 周三 23:20]
@@ -94,11 +95,12 @@ SCHEDULED: <2021-05-29 周六 19:00 ++1d> DEADLINE: <2021-05-29 周六 23:59 ++1
 - State "DONE"       from "TODO"       [2021-03-30 周二 21:06]
 - State "DONE"       from "TODO"       [2021-03-29 周一 21:11]
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-05-29 周六 18:00 ++1w> DEADLINE: <2021-05-31 周一 12:00 ++1w>
+SCHEDULED: <2021-06-05 周六 18:00 ++1w> DEADLINE: <2021-06-07 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-24 周一 11:00]
+:LAST_REPEAT: [2021-05-29 周六 18:22]
 :END:
+- State "DONE"       from "TODO"       [2021-05-29 周六 18:22]
 - State "DONE"       from "TODO"       [2021-05-24 周一 11:00]
 - State "DONE"       from "TODO"       [2021-05-16 周日 23:48]
 - State "DONE"       from "TODO"       [2021-05-09 周日 23:58]
@@ -109,13 +111,14 @@ SCHEDULED: <2021-05-29 周六 18:00 ++1w> DEADLINE: <2021-05-31 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-05-29 周六 19:00 ++1d>
+SCHEDULED: <2021-05-30 周日 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-05-28 周五 10:53]
+:LAST_REPEAT: [2021-05-29 周六 19:17]
 :END:
+- State "DONE"       from "TODO"       [2021-05-29 周六 19:17]
 - State "DONE"       from "TODO"       [2021-05-28 周五 10:53]
 - State "DONE"       from "TODO"       [2021-05-25 周二 09:51]
 - State "DONE"       from "TODO"       [2021-05-24 周一 19:35]
@@ -200,17 +203,6 @@ SCHEDULED: <2021-05-29 周六 09:00 ++1d>
 - State "CANCELED"   from "TODO"       [2021-05-12 周三 21:21] \\
   没时间
 - State "DONE"       from "TODO"       [2021-05-10 周一 11:09]
-** DONE [#B] 学习ui编辑器制作动画的方法                          :learn:m8:
-CLOSED: [2021-05-28 周五 19:12] SCHEDULED: <2021-05-21 周五 17:00>
-- State "DONE"       from "TODO"       [2021-05-28 周五 19:12]
-** WAIT [#A] 顶替规则的buff回合数显示异常                         :work:m8:
-SCHEDULED: <2021-05-23 周日 19:52>
-- State "WAIT"       from "TODO"       [2021-05-24 周一 19:34] \\
-  技能导表配置有问题, 先等待策划重新配置
-** WAIT [#A] 支持服务器外测服                                     :work:m8:
-SCHEDULED: <2021-05-23 周日 09:00>
-- State "WAIT"       from "TODO"       [2021-05-23 周日 21:21] \\
-  排查之后应该是服务端问题
 ** Archive                                                        :ARCHIVE:
 *** DONE [#A] 解决导表编辑器生成bug                              :m8:learn:
 CLOSED: [2021-05-09 周日 10:05]
@@ -354,50 +346,64 @@ CLOSED: [2021-05-17 周一 13:50] SCHEDULED: <2021-05-17 周一 10:40>
 :ARCHIVE_TIME: 2021-05-24 周一 10:55
 :END:
 - State "DONE"       from "TODO"       [2021-05-17 周一 13:50]
-** DONE [#A] 为宠物阵营等信息添加描述信息                         :work:m8:
+*** DONE [#A] 支持服务器外测服                                    :work:m8:
+CLOSED: [2021-05-29 周六 16:19] SCHEDULED: <2021-05-23 周日 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-29 周六 17:08
+:END:
+- State "DONE"       from "WAIT"       [2021-05-29 周六 16:19]
+- State "WAIT"       from "TODO"       [2021-05-23 周日 21:21] \\
+  排查之后应该是服务端问题
+*** DONE [#B] 学习ui编辑器制作动画的方法                         :learn:m8:
+CLOSED: [2021-05-28 周五 19:12] SCHEDULED: <2021-05-21 周五 17:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-29 周六 17:08
+:END:
+- State "DONE"       from "TODO"       [2021-05-28 周五 19:12]
+*** DONE [#A] 顶替规则的buff回合数显示异常                        :work:m8:
+CLOSED: [2021-05-29 周六 16:19] SCHEDULED: <2021-05-23 周日 19:52>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-29 周六 17:08
+:END:
+- State "DONE"       from "WAIT"       [2021-05-29 周六 16:19]
+- State "WAIT"       from "TODO"       [2021-05-24 周一 19:34] \\
+  技能导表配置有问题, 先等待策划重新配置
+*** DONE [#A] 为宠物阵营等信息添加描述信息                        :work:m8:
 CLOSED: [2021-05-24 周一 16:06] SCHEDULED: <2021-05-24 周一 13:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-29 周六 17:08
+:END:
 - State "DONE"       from "TODO"       [2021-05-24 周一 16:06]
-** DONE [#A] 调整初始界面位置                                     :work:m8:
+*** DONE [#A] 调整初始界面位置                                    :work:m8:
 CLOSED: [2021-05-25 周二 16:32] SCHEDULED: <2021-05-25 周二 16:27>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-29 周六 17:08
+:END:
 - State "DONE"       from "TODO"       [2021-05-25 周二 16:32]
-** DONE [#A] 处理ios真机包首登无网络配置弹窗问题                  :work:m8:
+*** DONE [#A] 处理ios真机包首登无网络配置弹窗问题                 :work:m8:
 CLOSED: [2021-05-25 周二 22:33] SCHEDULED: <2021-05-25 周二 09:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-29 周六 17:08
+:END:
 - State "DONE"       from "TODO"       [2021-05-25 周二 22:33]
-** DONE [#A] ios真机包图标问题                                    :work:m8:
+*** DONE [#A] ios真机包图标问题                                   :work:m8:
 CLOSED: [2021-05-25 周二 22:33] SCHEDULED: <2021-05-25 周二 22:30>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-05-29 周六 17:08
+:END:
 - State "DONE"       from "TODO"       [2021-05-25 周二 22:33]
 * Appointment
-** WAIT 组装一台性价比高的台式机用于开发和娱乐               :learn:future:
-DEADLINE: <2021-10-01 周五>
-- State "WAIT"       from "TODO"       [2021-04-10 周六 14:03] \\
-  1. 显卡太贵[fn:1]
-  2. 没钱
-#+CAPTION[零件表]:
-#+NAME: PC_PRICES
-| N | component   | brand | model | price |
-|---+-------------+-------+-------+-------|
-| / | <3>         |   <2> | <2>   | <2>   |
-|   | motherboard |     0 |       |       |
-|   | fan         |     0 |       |       |
-|   | cpu         |     0 |       |       |
-|   | gpu         |     0 |       |       |
-|   | memory      |     0 |       |       |
-|   | ssd         |     0 |       |       |
-|   | power       |     0 |       |       |
-|   | case        |     0 |       |       |
-|   | monitor     |     0 |       |       |
-|   | keyboard    |     0 |       |       |
-|   | earphone    |     0 |       |       |
-#+TBLFM: $3 = $4
-可能还需要线缆收纳, 硅脂, 防静电手环等设备
 * Project
-** DONE [#A] 制作临时组队功能                                     :work:m8:
+** WAIT [#A] M8项目战斗逻辑模块梳理       
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 制作临时组队功能                                    :work:m8:
 CLOSED: [2021-05-28 周五 15:54] SCHEDULED: <2021-05-25 周二 09:00> DEADLINE: <2021-05-29 周六 21:00>
 :PROPERTIES:
 :BLOCKER: children
+:ARCHIVE_TIME: 2021-05-29 周六 17:08
 :END:                          
 - State "DONE"       from "SCH"        [2021-05-28 周五 15:54]
-*** DONE 阅读设计文档并绘制初版界面
+**** DONE 阅读设计文档并绘制初版界面
 CLOSED: [2021-05-26 周三 15:24] SCHEDULED: <2021-05-25 周二 13:13>
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
@@ -411,35 +417,41 @@ CLOCK: [2021-05-25 周二 14:12]--[2021-05-25 周二 14:37] =>  0:25
 CLOCK: [2021-05-25 周二 13:42]--[2021-05-25 周二 14:07] =>  0:25
 CLOCK: [2021-05-25 周二 13:12]--[2021-05-25 周二 13:37] =>  0:25
 :END:
-*** DONE 设计模型层 
+**** DONE 设计模型层 
 CLOSED: [2021-05-26 周三 23:20] SCHEDULED: <2021-05-26 周三 15:24>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 - State "DONE"       from "TODO"       [2021-05-26 周三 23:20]
-*** DONE 实现模型层
+**** DONE 实现模型层
 CLOSED: [2021-05-27 周四 09:51] SCHEDULED: <2021-05-26 周三 23:20>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 
 - State "DONE"       from "TODO"       [2021-05-27 周四 09:51]
-*** DONE 完成网络协议和交互
+**** DONE 完成网络协议和交互
 CLOSED: [2021-05-27 周四 13:46] SCHEDULED: <2021-05-27 周四 09:51>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 - State "DONE"       from "TODO"       [2021-05-27 周四 13:46]
-*** DONE 实现界面层
+**** DONE 实现界面层
 CLOSED: [2021-05-27 周四 21:32] SCHEDULED: <2021-05-27 周四 13:46>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 - State "DONE"       from "TODO"       [2021-05-27 周四 21:32]
-*** DONE 测试
+**** DONE 测试
 CLOSED: [2021-05-28 周五 15:54] SCHEDULED: <2021-05-27 周四 21:32>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-** WAIT [#A] M8项目战斗逻辑模块梳理       
+* Someday
+** 学习《Unity3D 游戏开发》                                  :learn:future:
+** 学习《Lua程序设计》                                       :learn:future:
+** 学习 elisp                                                :learn:future:
+** 温习《流畅的python》                                      :learn:future:
+** 练习字帖                                                  :learn:future:
+** 学习英语                                                  :learn:future:
